Add Neural Field Model